--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="home" id="home">
         <h3>FIND YOUR CAR</h3>
-        <img src="image/home-img.png" alt="">
+        <img src="/image/home-img.png" alt="">
         <a href="#" class="btn">Explore Cars</a>
     </section>
 
